--- a/client-api/app/views/index.scala.html
+++ b/client-api/app/views/index.scala.html
@@ -1,5 +1,6 @@
-@()
+@(title: String)(content: String)
 
-@main("Welcome to Play") {
-  <h1>Welcome to Play!</h1>
+@main("Index") {
+  <h1>@title</h1>
+  <p>@content</p>
 }
