Added model class for signal events

--- a/signal-api/app/views/index.scala.html
+++ b/signal-api/app/views/index.scala.html
@@ -1,5 +1,6 @@
 @()
 
-@main("Welcome to Play") {
-  <h1>Welcome to Play!</h1>
+@main("Index page") {
+  <h1>Signal Processing API</h1>
+  <p>TODO: add link to swagger</p>
 }
